; ModuleID = '/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_i_sound.c_I_HandleSoundTimer.c'
source_filename = "/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_i_sound.c_I_HandleSoundTimer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@flag = common dso_local global i64 0, align 8
@audio_fd = common dso_local global i32 0, align 4
@mixbuffer = common dso_local global i32 0, align 4
@SAMPLECOUNT = common dso_local global i32 0, align 4
@BUFMUL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @I_HandleSoundTimer(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i64, i64* @flag, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %12

5:                                                ; preds = %1
  %6 = load i32, i32* @audio_fd, align 4
  %7 = load i32, i32* @mixbuffer, align 4
  %8 = load i32, i32* @SAMPLECOUNT, align 4
  %9 = load i32, i32* @BUFMUL, align 4
  %10 = mul nsw i32 %8, %9
  %11 = call i32 @write(i32 %6, i32 %7, i32 %10)
  store i64 0, i64* @flag, align 8
  br label %13

12:                                               ; preds = %1
  br label %14

13:                                               ; preds = %5
  store i32 0, i32* %2, align 4
  br label %14

14:                                               ; preds = %13, %12
  ret void
}

declare dso_local i32 @write(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
